FillLayer::VisuallyEqual incorrect comparison when first layer is none.

Even if the first background layer has none for image, we may have
subsequent layers with images. The previous implementation did an early
exit if both images in the first layer were null.

Implement VisuallyEqual without using operator== to fix this issue for
all layers without missing the optimization that different background
positions do not trigger a repaint if the background image for the layer
is none.

Bug: 793773
Change-Id: I846c75b2c4c273bcebecdf84685d834d946926b1